unpackaged/objects/Finding__c.object
<CustomObject>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <referenceTo>Complaints__c</referenceTo>
        <relationshipLabel>Findings</relationshipLabel>
        <relationshipName>Findings2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),  Contact__r.FirstName + &apos; &apos; + Contact__r.LastName ,  CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Findings</relationshipLabel>
        <relationshipName>Finding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Referral__c</fullName>
        <description>Date Referred to to External Agency</description>
        <inlineHelpText>Date Referred to to External Agency</inlineHelpText>
        <label>Date of Referral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Site_Visit__c</fullName>
        <description>Date of Site Visit</description>
        <inlineHelpText>Date of Site Visit</inlineHelpText>
        <label>Date of Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Partner__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Enforcement_Complete__c</fullName>
        <description>Is Enforcement Complete?</description>
        <inlineHelpText>Is Enforcement Complete?</inlineHelpText>
        <label>Is Enforcement Complete</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Going_Enforcement__c</fullName>
        <description>Describe any on-going enforcement efforts</description>
        <inlineHelpText>Describe any on-going enforcement efforts</inlineHelpText>
        <label>On-Going Enforcement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason_for_No_Site_Visit__c</fullName>
        <description>If other was selected for reason no site visit was conducted, please provide the reason here.</description>
        <inlineHelpText>If other was selected for reason no site visit was conducted, please provide the reason here.</inlineHelpText>
        <label>Other Reason for No Site Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_Site_Visit__c</fullName>
        <description>If no site visit was conducted, why not?</description>
        <inlineHelpText>If no site visit was conducted, why not?</inlineHelpText>
        <label>Why didn&apos;t you conduct a site visit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint is outside agency jurisdiction</fullName>
                </value>
                <value>
                    <fullName>Complaint lacked sufficient information</fullName>
                </value>
                <value>
                    <fullName>Complaint was referred to another agency for handling</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Agency__c</fullName>
        <description>Name of the Agency to which You Referred the Finding</description>
        <inlineHelpText>Name of the Agency to which You Referred the Finding</inlineHelpText>
        <label>Who Did You Refer it to?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Findings</relationshipLabel>
        <relationshipName>Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Referral__c</fullName>
        <inlineHelpText>Did you refer this complaint to another agency?</inlineHelpText>
        <label>Did you refer this to another agency?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Visit_Conducted__c</fullName>
        <description>Did you conduct a site visit to investigate the complaint?</description>
        <inlineHelpText>Did you conduct a site visit to investigate the complaint?</inlineHelpText>
        <label>Did you conduct a site visit?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_Violations_and_enforcement__c</fullName>
        <description>Summary of violations and enforcement action taken.</description>
        <inlineHelpText>Summary of violations and enforcement action taken.</inlineHelpText>
        <label>Summary of Violations and enforcement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Violations_Related_to_Complaint__c</fullName>
        <description>Were the violations related to the complaint?</description>
        <inlineHelpText>Were the violations related to the complaint?</inlineHelpText>
        <label>Violations Related to Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Violations_or_Compliance_Issues__c</fullName>
        <description>Did you find violations or compliance issues?</description>
        <inlineHelpText>Did you find violations or compliance issues?</inlineHelpText>
        <label>Violations or Compliance Issues</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <label>Finding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referral__c</columns>
        <columns>Complaint__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>